mobile navbar all done

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
-<h1>Hey dad !😎</h1>
-<app-carousel />
-<app-portraits />
-<app-about />
-<app-homegallery />
-<app-eventsection />
-
+<div class="home-container">
+    <h1>Hey dad !😎</h1>
+    <app-carousel />
+    <app-portraits />
+    <app-about />
+    <app-homegallery />
+    <app-eventsection />
+</div>
