--- a/src/styles.css
+++ b/src/styles.css
@@ -52,3 +52,17 @@ a {
     padding: 0.8rem;
   }
 }
+
+button {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
