--- a/src/app/home/carousel/mob-cl/mob-cl.component.html
+++ b/src/app/home/carousel/mob-cl/mob-cl.component.html
@@ -1,3 +1,3 @@
 <div class="carousel-m">
-    <h1>I am mobile carousel</h1>
+  <img src="../../../../assets/carousel-mb/Incense.jpg" alt="">
 </div>
