feat(portrait and about): completed with better semantic tags

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,1 +1,25 @@
-<p>about works!</p>
+<main class="welcome">
+    <header class="welcome-text">
+        <h1>
+            <span class="welcomeTo">Welcome to</span>
+            <span>&nbsp;Sikkim Khadi</span> 
+            <span class="welcomeTo">&nbsp;and</span>
+            <span>&nbsp;Village Industries Board</span>
+        </h1>
+    </header>
+    <article class="welcome-contents">
+      <section class="details">
+        <p>Sikkim Khadi &amp; Village Industries Board (SKVIB) is an autonomous body of Government of Sikkim under the Commerce &amp; Industries Department. While it was established in 1963, the Sikkim Khadi &amp; Village Industries Board Act of 1996 covers its functions and objectives which are as follows :</p>
+        <ol>
+          <li>Social objective of generating employment to the rural artisans in the field of khadi
+            and village industries</li>
+          <li>The economic objective of producing saleable Khadi &amp; village industries goods</li>
+          <li>The wider objective of creating self reliance amongst the people and building up of a
+            strong rural community spirit</li>
+          <li>Implementation of government schemes targeting rural employment generation</li>
+          <li>Impart training and support in establishment of khadi institutions, societies and
+            village industries units.</li>
+        </ol>
+      </section>
+    </article>
+</main>
