--- a/src/app/home/portraits/portraits.component.html
+++ b/src/app/home/portraits/portraits.component.html
@@ -1,1 +1,25 @@
-<p>portraits works!</p>
+<div class="portraits-container">
+  <div class="portrait-item">
+    <div class="portrait-image">
+      <img src="../../../assets/portraits/cm.png" alt="Chief Minister">
+    </div>
+    <h3 class="portrait-name">Shri P.S Tamang (Golay)</h3>
+    <p class="portrait-title">Honourable Chief Minister of Sikkim</p>
+  </div>
+
+  <div class="portrait-item">
+    <div class="portrait-image">
+      <img src="../../../assets/portraits/mg.png" alt="Father of Nation">
+    </div>
+    <h3 class="portrait-name">Father of Nation</h3>
+    <p class="portrait-title">Mahatma Gandhi</p>
+  </div>
+
+  <div class="portrait-item">
+    <div class="portrait-image">
+      <img src="../../../assets/portraits/chairman.png" alt="Chairperson">
+    </div>
+    <h3 class="portrait-name">Smt. Chung Chung Bhutia</h3>
+    <p class="portrait-title">Hon'ble Chairperson Sikkim Khadi & V.I. Board</p>
+  </div>
+</div>
