feat: homegallery and events section done

--- a/src/app/home/eventsection/eventsection.component.html
+++ b/src/app/home/eventsection/eventsection.component.html
@@ -1,1 +1,23 @@
-<p>eventsection works!</p>
+<div class="events">
+    <div class="card">
+      <img src="../../../assets/events/pic4.jpg" alt="event" style="width:100%">
+      <div class="container">
+        <p class="card-title">Our Latest Events</p>
+        <a [routerLink]="['/latest']">Read More</a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../../../assets/events/pic2.jpg" alt="event" style="width:100%">
+      <div class="container">
+        <p class="card-title">Upcoming Events</p>
+        <a [routerLink]="['/upcoming']">Read More</a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../../../assets/events/pic5.jpg" alt="event" style="width:100%">
+      <div class="container">
+        <p class="card-title">Annual Exhibition</p>
+        <a [routerLink]="['/annual']">Read More</a>
+      </div>
+    </div>
+  </div>
