--- a/src/app/home/homegallery/homegallery.component.html
+++ b/src/app/home/homegallery/homegallery.component.html
@@ -1,1 +1,190 @@
-<p>homegallery works!</p>
+<!-- Main container -->
+<div>
+    <!-- Gallery heading -->
+    <div class="main_page_gallery_heading">Khadi Products and Outlets</div>
+    <!-- Gallery grid container -->
+    <div class="maingallery">
+        <!-- Gallery items - Each represents a product/outlet with image and overlay -->
+        <div class="pictures" id="p4">
+            <img src="../../../assets/mainGallery/img4.jpg" alt="Handwoven Silk Saris">
+            <a [routerLink]="['/products']" class="overlay">
+                Handwoven Silk Saris
+                <div class="gallery_image_link">Click to see more<span class="material-symbols-outlined">arrow_right_alt</span></div>
+            </a>
+        </div>
+        <div class="pictures" id="p5">
+            <img src="../../../assets/mainGallery/img5.jpg" alt="Organic Incense">
+            <a [routerLink]="['/products']" class="overlay">
+                Organic Incense
+                <div class="gallery_image_link">Click to see more<span class="material-symbols-outlined">arrow_right_alt</span></div>
+            </a>
+        </div>
+        <div class="pictures" id="p7">
+            <img src="../../../assets/mainGallery/img7.jpg" alt="">
+            <a [routerLink]="['/outlets']" class="overlay">
+                Namchi Outlet
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p8">
+            <img src="../../../assets/mainGallery/img8.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Khadi Quilts
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p9">
+            <img src="../../../assets/mainGallery/img9.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Simul Pillows
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p10">
+            <img src="../../../assets/mainGallery/img10.jpg" alt="">
+            <a [routerLink]="['/outlets']" class="overlay">
+                Gyalshing Outlet
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p11">
+            <img src="../../../assets/mainGallery/img11.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Local Organic Turmeric
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p12">
+            <img src="../../../assets/mainGallery/img12.jpg" alt="">
+            <a [routerLink]="['/production']" class="overlay" style="font-size: 2rem;">
+                Tarku Weaving Center
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p13">
+            <img src="../../../assets/mainGallery/img13.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Temi Tea
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p14">
+            <img src="../../../assets/mainGallery/img14.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Khadi Hand Made Shawls
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p15">
+            <img src="../../../assets/mainGallery/img15.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Organic Honey
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p16">
+            <img src="../../../assets/mainGallery/img16.jpg" alt="">
+            <a [routerLink]="['/production']" class="overlay">
+                Turuk Weaving Center
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p17">
+            <img src="../../../assets/mainGallery/img17.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Hand made cotton saris
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p18">
+            <img src="../../../assets/mainGallery/img18.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Bee Keeping Equipment
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p19">
+            <img src="../../../assets/mainGallery/img19.jpg" alt="">
+            <a [routerLink]="['/outlets']" class="overlay">
+                Deorali Outlet
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p20">
+            <img src="../../../assets/mainGallery/img20.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Khadi Hand Made Shawls
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p1">
+            <img src="../../../assets/mainGallery/img1.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Khadi Toileteries
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p2">
+            <img src="../../../assets/mainGallery/img2.jpg" alt="">
+            <a [routerLink]="['/products']" class="overlay">
+                Local Organic Honey
+                <div class="gallery_image_link">
+                    Click to see more
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                </div>
+            </a>
+        </div>
+        <div class="pictures" id="p3">
+            <img src="../../../assets/mainGallery/img3.jpg" alt="Khadi Duree and Rugs">
+            <a [routerLink]="['/products']" class="overlay">
+                Khadi Duree and Rugs
+                <div class="gallery_image_link">Click to see more<span class="material-symbols-outlined">arrow_right_alt</span></div>
+            </a>
+        </div>
+    </div>
+</div>
