tesla's icon equalised 😅

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -53,17 +53,17 @@
             <h3>Follow us:</h3>
             <nav class="social_media_links" aria-label="Social Media Links">
                 <!-- Twitter Link -->
-                <a href="#" class="twitter" aria-label="Visit our Twitter page">
+                <a href="javascript:void(0)" class="twitter" aria-label="Visit our Twitter page">
                     <img src="../../../assets/icons/twitter.png" alt="twitter icon">
                 </a>
 
                 <!-- Facebook Link -->
-                <a href="#" class="facebook" aria-label="Visit our Facebook page">
+                <a href="javascript:void(0)" class="facebook" aria-label="Visit our Facebook page">
                     <img src="../../../assets/icons/facebook.png" alt="facebook icon">
                 </a>
 
                 <!-- Instagram Link -->
-                <a href="#" class="instagram" aria-label="Visit our Instagram page">
+                <a href="javascript:void(0)" class="instagram" aria-label="Visit our Instagram page">
                     <img src="../../../assets/icons/instagram.png" alt="instagram icon">
                 </a>
             </nav>
