pune description missing text added

--- a/src/app/pages/production/production.component.html
+++ b/src/app/pages/production/production.component.html
@@ -1,101 +1,119 @@
 <section class="production__pictures">
-    <p class="production__headings">Production and Training Centres</p>
-    <div class="production__center">
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/turuk4.jpg" alt="">
-        <div class="production__titles">
-          <h2>Turuk Weaving Center</h2>
-          <button class="btn"><a [routerLink]="['/turuk']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">Production cum Training Centre at Turuk Namchi District. Cotton towels and thaan cloth are woven in this centre. Training is also given to new artisans along with stipend.</p>
+  <p class="production__headings">Production and Training Centres</p>
+  <div class="production__center">
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/turuk4.jpg" alt="">
+      <div class="production__titles">
+        <h2>Turuk Weaving Center</h2>
+        <button class="btn"><a [routerLink]="['/turuk']">More&nbsp; &#8594;</a></button>
       </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/dodak1.jpg" alt="">
-        <div class="production__titles">
-          <h2>Dodak Weaving Center</h2>
-          <button class="btn"><a [routerLink]="['/dodak']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">SKVIB has Weaving cum Spinning centre at Dodak, Soreng District. Woollen asanis and radiis are hand woven in this centre. New local artisans are also given training along with stipend.</p>
-      </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/sam1.jpg" alt="">
-        <div class="production__titles">
-          <h2>Samdong Woollen Center</h2>
-          <button class="btn"><a [routerLink]="['/samdong']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">SKVIB have Weaving cum Spinning center located at Samdong Soreng District. Woollen ashanis and radiis are hand woven in this centre. New local artisans are also given training along with stipend</p>
-      </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/bee2.jpg" alt="">
-        <div class="production__titles">
-          <h2>Bee keeping training in Pune</h2>
-          <button class="btn"><a [routerLink]="['/pune']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check"></p>
-      </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/tarku_bhawan.jpg" alt="">
-        <div class="production__titles">
-          <h2>Tarku Production Center</h2>
-          <button class="btn"><a [routerLink]="['/tarku']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">Production cum Training Centre at Tarku Namchi District where cotton towels and thaan cloth are woven. Training is also given to new artisans along with stipend.</p>
-      </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/gom.jpg" alt="">
-        <div class="production__titles">
-          <h2>GOM Center</h2>
-          <button class="btn"><a [routerLink]="['/gom']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">Khadi cotton yarn spinning is done in this centre located at Gom, Namchi   District. New artisans are also provided training in this centre.</p>
-      </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/raley.jpg" alt="">
-        <div class="production__titles">
-          <h2>Raley Center</h2>
-          <button class="btn"><a [routerLink]="['/raley']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">Khadi cotton yarn is hand spun in this centre located at Raley Khesay Gangtok District. New artisans are also provided training in this centre along with stipend.</p>
-      </div>
-      <!-- sec class ends -->
-      <!-- sec class starts -->
-      <div class="sec">
-        <img src="../../../assets/production/images/mendgaon.jpg" alt="">
-        <div class="production__titles">
-          <h2>Mendgaon Weaving Center</h2>
-          <button class="btn"><a [routerLink]="['/mendogaon']">More&nbsp; &#8594;</a></button>
-        </div>
-        <p class="check">SKVIB have Weaving cum Spinning centre at Mendogaon, Soreng District. Woollen asanis and radiis are hand woven in this centre. New local Artisans are also given training along with stipend</p>
-      </div>
-      <!-- sec class ends -->
+      <p class="check">Production cum Training Centre at Turuk Namchi District. Cotton towels and thaan cloth are woven
+        in this centre. Training is also given to new artisans along with stipend.</p>
     </div>
-  </section>
-  <div class="ytd-container">
-    <h1>Production and Training Videos</h1>
-    <div class="ytv">
-      <iframe width="1280" height="720" src="https://www.youtube.com/embed/-ChfTCKSYG8" title="Tarku_Training_Video_2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/dodak1.jpg" alt="">
+      <div class="production__titles">
+        <h2>Dodak Weaving Center</h2>
+        <button class="btn"><a [routerLink]="['/dodak']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">SKVIB has Weaving cum Spinning centre at Dodak, Soreng District. Woollen asanis and radiis are
+        hand woven in this centre. New local artisans are also given training along with stipend.</p>
     </div>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/sam1.jpg" alt="">
+      <div class="production__titles">
+        <h2>Samdong Woollen Center</h2>
+        <button class="btn"><a [routerLink]="['/samdong']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">SKVIB have Weaving cum Spinning center located at Samdong Soreng District. Woollen ashanis and
+        radiis are hand woven in this centre. New local artisans are also given training along with stipend</p>
+    </div>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/bee2.jpg" alt="">
+      <div class="production__titles">
+        <h2>Bee keeping training in Pune</h2>
+        <button class="btn"><a [routerLink]="['/pune']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">A batch of ten educated Bee Enthusiast sent to the Central Bee Research Institute(CBRTI), Pune
+        for one month certificate course on modern Beekeeping techniques in the month of february 2023. These trainees
+        have proven to be an invaluable pool of trainers for imparting training and propagation of Beekeeping among
+        local framers and enthusiasts.</p>
+    </div>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/tarku_bhawan.jpg" alt="">
+      <div class="production__titles">
+        <h2>Tarku Production Center</h2>
+        <button class="btn"><a [routerLink]="['/tarku']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">Production cum Training Centre at Tarku Namchi District where cotton towels and thaan cloth are
+        woven. Training is also given to new artisans along with stipend.</p>
+    </div>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/gom.jpg" alt="">
+      <div class="production__titles">
+        <h2>GOM Center</h2>
+        <button class="btn"><a [routerLink]="['/gom']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">Khadi cotton yarn spinning is done in this centre located at Gom, Namchi District. New artisans
+        are also provided training in this centre.</p>
+    </div>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/raley.jpg" alt="">
+      <div class="production__titles">
+        <h2>Raley Center</h2>
+        <button class="btn"><a [routerLink]="['/raley']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">Khadi cotton yarn is hand spun in this centre located at Raley Khesay Gangtok District. New
+        artisans are also provided training in this centre along with stipend.</p>
+    </div>
+    <!-- sec class ends -->
+    <!-- sec class starts -->
+    <div class="sec">
+      <img src="../../../assets/production/images/mendgaon.jpg" alt="">
+      <div class="production__titles">
+        <h2>Mendgaon Weaving Center</h2>
+        <button class="btn"><a [routerLink]="['/mendogaon']">More&nbsp; &#8594;</a></button>
+      </div>
+      <p class="check">SKVIB have Weaving cum Spinning centre at Mendogaon, Soreng District. Woollen asanis and radiis
+        are hand woven in this centre. New local Artisans are also given training along with stipend</p>
+    </div>
+    <!-- sec class ends -->
   </div>
-  <div class="ytd-container">
-    <div class="ytv">
-      <iframe width="1280" height="720" src="https://www.youtube.com/embed/TXVSXuE1mfI" title="Tarku_Training_Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+</section>
+<div class="ytd-container">
+  <h1>Production and Training Videos</h1>
+  <div class="ytv">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/-ChfTCKSYG8" title="Tarku_Training_Video_2"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
-  <div class="ytd-container">
-    <div class="ytv">
-      <iframe width="1280" height="720" src="https://www.youtube.com/embed/kIEtkEKwbUo" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+</div>
+<div class="ytd-container">
+  <div class="ytv">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/TXVSXuE1mfI" title="Tarku_Training_Video"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
+</div>
+<div class="ytd-container">
+  <div class="ytv">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/kIEtkEKwbUo" title="" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+</div>
