styling of event cards, layout modified

--- a/src/app/events/latest/latest.component.html
+++ b/src/app/events/latest/latest.component.html
@@ -2,7 +2,7 @@
     <nav class="breadcrumb" aria-label="breadcrumb">
         <ol>
             <li>
-                <a routerLink="/latest">latest-events</a>
+                <a routerLink="/latest">latest events</a>
                 @if (!isLatestRoute()) {
                     <span>&nbsp;/&nbsp;{{ eventDate() }}</span>
                 }
