--- a/src/app/events/event-card/event-card.component.css
+++ b/src/app/events/event-card/event-card.component.css
@@ -3,22 +3,22 @@
     gap: 1.5rem;
     padding: 1.5rem;
     border-radius: 12px;
-    background-color: #fff;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    background-color: #fae7c9;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
 .event-card:hover {
     transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
 .event-image {
-    flex: 0 0 200px;
-    height: 150px;
+    flex: 0 0 20rem;
+    height: 15rem;
     overflow: hidden;
-    border-radius: 8px;
+    border-radius: 0.8rem;
 }
 
 .event-image img {
@@ -37,18 +37,18 @@
 .event-title {
     margin: 0;
     font-size: 1.5rem;
-    color: #333;
+    color: #70490b;
 }
 
 .event-date {
     margin: 0;
-    color: #666;
+    color: #8c6b42;
     font-size: 0.9rem;
 }
 
 .event-description {
     margin: 0;
-    color: #444;
+    color: #7e5a2a;
     line-height: 1.5;
 }
 
