--- a/src/app/events/latest/latest.component.css
+++ b/src/app/events/latest/latest.component.css
@@ -1,10 +1,24 @@
 .pageContainer {
     padding: 2rem;
-    max-width: 1200px;
+    max-width: 112rem;
     margin: 0 auto;
+    background-color: #F5D096;
+    border: 1px solid #F1BB67;
+    user-select: none;
 }
 
+.acontents {
+    margin: 1rem auto;
+    padding: 2rem;
+    max-width: 80%;
+    background-color: #F6D7A6;
+    color: #70490b;
+    font-size: 1.6rem;
+}
+
+
 .breadcrumb {
+    padding: 2rem 12rem;
     margin-bottom: 2rem;
 }
 
@@ -18,10 +32,20 @@
 
 .breadcrumb a {
     color: #0066cc;
-    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: capitalize;
+
+    text-decoration: italic;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.breadcrumb span {
+    color: #70490b;
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .breadcrumb a:hover {
@@ -33,4 +57,3 @@
     flex-direction: column;
     gap: 1.5rem;
 }
-
