--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -34,7 +34,7 @@
   text-transform: uppercase;
   font-size: 3.2rem;
   font-weight: 900;
-  color: rgb(112, 73, 11);
+  color: #70490b;
   padding: 0 0 1rem 0;
 }
 
