--- a/src/app/events/latest/latest.component.html
+++ b/src/app/events/latest/latest.component.html
@@ -4,7 +4,7 @@
             <li>
                 <a routerLink="/latest">latest events</a>
                 @if (!isLatestRoute()) {
-                    <span>&nbsp;/&nbsp;{{ eventDate() }}</span>
+                    <span>/&nbsp; {{ eventDate() }}</span>
                 }
             </li>
         </ol>
